# kasparro-agentic-gaurav-mishra

./: main.py  pyproject.toml  requirements.txt
data/input/: product_data.json
docs/: projectdocumentation.md
output/: comparison_page.json  faq.json  product_page.json
src/: __init__.py
src/agents/: __init__.py  comparison_generator.py  data_parser.py  faq_generator.py  product_page_generator.py  question_generator.py
src/logic_blocks/: __init__.py  benefit_block.py  comparison_block.py  ingredient_block.py  price_block.py  safety_block.py  usage_block.py
src/models/: __init__.py  pages.py  product.py  question.py  templates.py
src/orchestration/: __init__.py  execution.py  graph.py  state.py
src/templates/: __init__.py  comparison_template.py  faq_template.py  product_template.py  template_engine.py
src/utils/: __init__.py  file_writer.py  llm_client.py
